--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.2",
+    "mongodb": "^4.3.1",
     "mongoose": "^6.1.6",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
