--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "connect-mongo": "^4.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^14.1.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
